I added some code/accidently touched Vincents code

--- a/Jazlyn Pedersen /Resources and Recycling.ipynb
+++ b/Jazlyn Pedersen /Resources and Recycling.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -41,12 +41,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from IPython.display import Image\n",
     "Image(url= \"http://www.mountainjunkiegear.com/wp-content/uploads/2013/04/How-Solar-Panels-Work.jpg\", width=1000, height=300)"
    ]
   },
@@ -126,6 +127,7 @@
     }
    ],
    "source": [
+    "from IPython.display import Image\n",
     "Image(url= \"http://www.dynamicscience.com.au/tester/solutions1/electric/electricenergy.gif\", width=800, height=200)"
    ]
   },
@@ -160,6 +162,7 @@
     }
    ],
    "source": [
+    "from IPython.display import Image\n",
     "Image(url= \"http://www.dynamicscience.com.au/tester/solutions1/electric/powerstation/Untitled-17.gif\", width=800, height=100)"
    ]
   },
@@ -177,6 +180,303 @@
     "4) The energy lost is in the form of DROP OPTIONS (electrical, heat, chemical, mechanical)\n",
     "\n",
     "5) What type of energy is carried by steam DROP OPTIONS (electrical, chemical, mechanical, kinetic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <style>\n",
+       "        #list {\n",
+       "            margin: 20px 0;\n",
+       "            padding: 0;\n",
+       "        }\n",
+       "        #list li {\n",
+       "            list-style: none;\n",
+       "            margin: 5px 0;\n",
+       "        }\n",
+       "\n",
+       "        .colour {\n",
+       "            \n",
+       "        }\n",
+       "\n",
+       "        .answerSelect {\n",
+       "            margin: 10px 10px;\n",
+       "        }\n",
+       "\n",
+       "        .correct {\n",
+       "            color: green;\n",
+       "            font-size: 25px;\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        .wrong {\n",
+       "            color: red;\n",
+       "            font-size: 25px;\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        .ansBtn {\n",
+       "            cursor: pointer;\n",
+       "            border: solid black 1px;\n",
+       "            background: #d3d3d3;\n",
+       "            padding: 10px 5px;\n",
+       "            border-radius: 5px;\n",
+       "            font-family: 'Courier New', Courier, monospace;\n",
+       "            font-size: 20px;\n",
+       "        }\n",
+       "\n",
+       "        .ansBtn:hover {\n",
+       "            background: #f3f3f3;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <body>\n",
+       "    <div style=\"height: 550px\">\n",
+       "        <ul id=\"list\">\n",
+       "            <li>\n",
+       "                <div class=\"What process captures solar energy\" style=\"background: #099FFF\"></div>\n",
+       "                <select name=\"\" id=\"q1\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"evaporation\">Evaporation</option>\n",
+       "                    <option value=\"photosynthesis\">Photosynthesis</option>\n",
+       "                    <option value=\"respiration\">Respiration</option>\n",
+       "                    <option value=\"condensation\">Condensation</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q1C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q1W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #FF0000\"></div>\n",
+       "                <select name=\"\" id=\"q2\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"kinetic into mechanical\">Kinetic into mechanical</option>\n",
+       "                    <option value=\"chemical into heat\">Chemical into heat</option>\n",
+       "                    <option value=\"mechanical into electrical\">Mechanical into electrical</option>\n",
+       "                    <option value=\"solar into chemical\">Solar into chemical</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q2C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q2W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #CC00FF\"></div>\n",
+       "                <select name=\"\" id=\"q3\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"less electrical energy that is generated\">Less electrical energy that is generated</option>\n",
+       "                    <option value=\"the more electrical energy that is generated\">The more electrical energy that is generated</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q3C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q3W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #00FF00\"></div>\n",
+       "                <select name=\"\" id=\"q4\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"Electrical\">Electrical</option>\n",
+       "                    <option value=\"Heat\">Heat</option>\n",
+       "                    <option value=\"Chemical\">Chemical</option>\n",
+       "                    <option value=\"Mechanical\">Mechanical</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q4C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q4W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #FFFF33\"></div>\n",
+       "                <select name=\"\" id=\"q5\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"Electrical\">Electrical</option>\n",
+       "                    <option value=\"Chemical\">Chemical</option>\n",
+       "                    <option value=\"Mechanical\">Mechanical</option>\n",
+       "                    <option value=\"Kinetic\">Kinetic</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q5C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q5W\">&#10007</span>\n",
+       "            </li>\n",
+       "        </ul>\n",
+       "        <span class=\"ansBtn\" id=\"ansBtn\" onclick=\"checkAns()\">Check Answers!</span>\n",
+       "    </div>\n",
+       "\n",
+       "    <script>\n",
+       "        function checkAns() {\n",
+       "            console.log('clicked');\n",
+       "            var ansArray = [];\n",
+       "            var questionList = document.getElementById('list');\n",
+       "            for (var i = 0; i < document.getElementsByClassName('correct').length; i++) {\n",
+       "                document.getElementsByClassName('correct')[i].style.display = 'none';  \n",
+       "            }\n",
+       "            for (var i = 0; i < document.getElementsByClassName('wrong').length; i++) {\n",
+       "                document.getElementsByClassName('wrong')[i].style.display = 'none';\n",
+       "            }\n",
+       "            for (var i = 0; i < questionList.children.length; i++) {\n",
+       "                ansArray.push(questionList.children[i].children[1].value);\n",
+       "            }\n",
+       "            ansArray[0] === 'photosynthesis' ? setAns(1, true) : setAns(1, false);\n",
+       "            ansArray[1] === 'solar into chemical' ? setAns(2, true) : setAns(2, false);\n",
+       "            ansArray[2] === 'less electrical energy that is generated' ? setAns(3, true) : setAns(3, false);\n",
+       "            ansArray[3] === 'heat' ? setAns(4, true) : setAns(4, false);\n",
+       "            ansArray[4] === 'kinetic' ? setAns(5, true) : setAns(5, false);\n",
+       "        }\n",
+       "\n",
+       "        function setAns(pos, isCorrect) {\n",
+       "            var ansId = \"Q\" + pos + (isCorrect ? \"C\" : \"W\");\n",
+       "            var ans = document.getElementById(ansId);\n",
+       "            ans.style.display = \"inline\";\n",
+       "        }\n",
+       "    </script>\n",
+       "</body>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "    <style>\n",
+    "        #list {\n",
+    "            margin: 20px 0;\n",
+    "            padding: 0;\n",
+    "        }\n",
+    "        #list li {\n",
+    "            list-style: none;\n",
+    "            margin: 5px 0;\n",
+    "        }\n",
+    "\n",
+    "        .colour {\n",
+    "            \n",
+    "        }\n",
+    "\n",
+    "        .answerSelect {\n",
+    "            margin: 10px 10px;\n",
+    "        }\n",
+    "\n",
+    "        .correct {\n",
+    "            color: green;\n",
+    "            font-size: 25px;\n",
+    "            display: none;\n",
+    "        }\n",
+    "\n",
+    "        .wrong {\n",
+    "            color: red;\n",
+    "            font-size: 25px;\n",
+    "            display: none;\n",
+    "        }\n",
+    "\n",
+    "        .ansBtn {\n",
+    "            cursor: pointer;\n",
+    "            border: solid black 1px;\n",
+    "            background: #d3d3d3;\n",
+    "            padding: 10px 5px;\n",
+    "            border-radius: 5px;\n",
+    "            font-family: 'Courier New', Courier, monospace;\n",
+    "            font-size: 20px;\n",
+    "        }\n",
+    "\n",
+    "        .ansBtn:hover {\n",
+    "            background: #f3f3f3;\n",
+    "        }\n",
+    "    </style>\n",
+    "    \n",
+    "    <body>\n",
+    "    <div style=\"height: 550px\">\n",
+    "        <ul id=\"list\">\n",
+    "            <li>\n",
+    "                <div class=\"What process captures solar energy\" style=\"background: #099FFF\"></div>\n",
+    "                <select name=\"\" id=\"q1\" class=\"answerSelect\">\n",
+    "                    <option value=\"default\" selected>Select an Answer</option>\n",
+    "                    <option value=\"evaporation\">Evaporation</option>\n",
+    "                    <option value=\"photosynthesis\">Photosynthesis</option>\n",
+    "                    <option value=\"respiration\">Respiration</option>\n",
+    "                    <option value=\"condensation\">Condensation</option>\n",
+    "                </select>\n",
+    "                <span class=\"correct\" id=\"Q1C\">&#10003</span>\n",
+    "                <span class=\"wrong\" id=\"Q1W\">&#10007</span>\n",
+    "            </li>\n",
+    "            <li>\n",
+    "                <div class=\"colour\" style=\"background: #FF0000\"></div>\n",
+    "                <select name=\"\" id=\"q2\" class=\"answerSelect\">\n",
+    "                    <option value=\"default\" selected>Select an Answer</option>\n",
+    "                    <option value=\"kinetic into mechanical\">Kinetic into mechanical</option>\n",
+    "                    <option value=\"chemical into heat\">Chemical into heat</option>\n",
+    "                    <option value=\"mechanical into electrical\">Mechanical into electrical</option>\n",
+    "                    <option value=\"solar into chemical\">Solar into chemical</option>\n",
+    "                </select>\n",
+    "                <span class=\"correct\" id=\"Q2C\">&#10003</span>\n",
+    "                <span class=\"wrong\" id=\"Q2W\">&#10007</span>\n",
+    "            </li>\n",
+    "            <li>\n",
+    "                <div class=\"colour\" style=\"background: #CC00FF\"></div>\n",
+    "                <select name=\"\" id=\"q3\" class=\"answerSelect\">\n",
+    "                    <option value=\"default\" selected>Select an Answer</option>\n",
+    "                    <option value=\"less electrical energy that is generated\">Less electrical energy that is generated</option>\n",
+    "                    <option value=\"the more electrical energy that is generated\">The more electrical energy that is generated</option>\n",
+    "                </select>\n",
+    "                <span class=\"correct\" id=\"Q3C\">&#10003</span>\n",
+    "                <span class=\"wrong\" id=\"Q3W\">&#10007</span>\n",
+    "            </li>\n",
+    "            <li>\n",
+    "                <div class=\"colour\" style=\"background: #00FF00\"></div>\n",
+    "                <select name=\"\" id=\"q4\" class=\"answerSelect\">\n",
+    "                    <option value=\"default\" selected>Select an Answer</option>\n",
+    "                    <option value=\"Electrical\">Electrical</option>\n",
+    "                    <option value=\"Heat\">Heat</option>\n",
+    "                    <option value=\"Chemical\">Chemical</option>\n",
+    "                    <option value=\"Mechanical\">Mechanical</option>\n",
+    "                </select>\n",
+    "                <span class=\"correct\" id=\"Q4C\">&#10003</span>\n",
+    "                <span class=\"wrong\" id=\"Q4W\">&#10007</span>\n",
+    "            </li>\n",
+    "            <li>\n",
+    "                <div class=\"colour\" style=\"background: #FFFF33\"></div>\n",
+    "                <select name=\"\" id=\"q5\" class=\"answerSelect\">\n",
+    "                    <option value=\"default\" selected>Select an Answer</option>\n",
+    "                    <option value=\"Electrical\">Electrical</option>\n",
+    "                    <option value=\"Chemical\">Chemical</option>\n",
+    "                    <option value=\"Mechanical\">Mechanical</option>\n",
+    "                    <option value=\"Kinetic\">Kinetic</option>\n",
+    "                </select>\n",
+    "                <span class=\"correct\" id=\"Q5C\">&#10003</span>\n",
+    "                <span class=\"wrong\" id=\"Q5W\">&#10007</span>\n",
+    "            </li>\n",
+    "        </ul>\n",
+    "        <span class=\"ansBtn\" id=\"ansBtn\" onclick=\"checkAns()\">Check Answers!</span>\n",
+    "    </div>\n",
+    "\n",
+    "    <script>\n",
+    "        function checkAns() {\n",
+    "            console.log('clicked');\n",
+    "            var ansArray = [];\n",
+    "            var questionList = document.getElementById('list');\n",
+    "            for (var i = 0; i < document.getElementsByClassName('correct').length; i++) {\n",
+    "                document.getElementsByClassName('correct')[i].style.display = 'none';  \n",
+    "            }\n",
+    "            for (var i = 0; i < document.getElementsByClassName('wrong').length; i++) {\n",
+    "                document.getElementsByClassName('wrong')[i].style.display = 'none';\n",
+    "            }\n",
+    "            for (var i = 0; i < questionList.children.length; i++) {\n",
+    "                ansArray.push(questionList.children[i].children[1].value);\n",
+    "            }\n",
+    "            ansArray[0] === 'photosynthesis' ? setAns(1, true) : setAns(1, false);\n",
+    "            ansArray[1] === 'solar into chemical' ? setAns(2, true) : setAns(2, false);\n",
+    "            ansArray[2] === 'less electrical energy that is generated' ? setAns(3, true) : setAns(3, false);\n",
+    "            ansArray[3] === 'heat' ? setAns(4, true) : setAns(4, false);\n",
+    "            ansArray[4] === 'kinetic' ? setAns(5, true) : setAns(5, false);\n",
+    "        }\n",
+    "\n",
+    "        function setAns(pos, isCorrect) {\n",
+    "            var ansId = \"Q\" + pos + (isCorrect ? \"C\" : \"W\");\n",
+    "            var ans = document.getElementById(ansId);\n",
+    "            ans.style.display = \"inline\";\n",
+    "        }\n",
+    "    </script>\n",
+    "</body>"
    ]
   },
   {
@@ -224,6 +524,7 @@
     }
    ],
    "source": [
+    "from IPython.display import Image\n",
     "Image(url= \"https://i.gifer.com/so8.gif\", width=600, height=100)"
    ]
   },
