--- a/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
+++ b/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
@@ -466,9 +466,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "body {\n",
+       "    margin: 0;\n",
+       "}\n",
+       "\n",
+       ".main {\n",
+       "    margin: 0 auto;\n",
+       "    width: 500px;\n",
+       "}\n",
+       "\n",
+       "#clock {\n",
+       "    border-radius: 40px;\n",
+       "    padding: 0;\n",
+       "}\n",
+       "\n",
+       "h1 {\n",
+       "    font-family: Arial, Helvetica, sans-serif;\n",
+       "}\n",
+       "</style>\n",
+       "<body>\n",
+       "    <div class=\"main\">\n",
+       "        <canvas id=\"clock\"></canvas>\n",
+       "        <div class=\"btns\">\n",
+       "            <button onclick=\"speedUp();\">Speed Up</button>\n",
+       "            <button onclick=\"slowDown();\">Slow Down</button>\n",
+       "            <button onclick=\"regularSpeed(null);\">Regular Speed</button>\n",
+       "            <button onclick=\"resetClock();\">Reset</button>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "    <script>\n",
+       "   var canvas = document.getElementById('clock');\n",
+       "var ctx = canvas.getContext('2d');\n",
+       "\n",
+       "var width = 600;\n",
+       "var height = 600;\n",
+       "canvas.width = width;\n",
+       "canvas.height = height;\n",
+       "var x = canvas.width / 2;\n",
+       "var y = canvas.height / 2;\n",
+       "var radius = 40;\n",
+       "var lineWidth = 35;\n",
+       "\n",
+       "var speed = 0;\n",
+       "\n",
+       "var months = [\n",
+       "    \"January\",\n",
+       "    \"February\",\n",
+       "    \"March\",\n",
+       "    \"April\",\n",
+       "    \"May\",\n",
+       "    \"June\",\n",
+       "    \"July\",\n",
+       "    \"August\",\n",
+       "    \"September\",\n",
+       "    \"October\",\n",
+       "    \"November\",\n",
+       "    \"December\",\n",
+       "]\n",
+       "\n",
+       "function speedUp() {\n",
+       "    if (speed <= 0)\n",
+       "        speed = 1;\n",
+       "    if (speed < 30000)\n",
+       "        speed *= 8;\n",
+       "}\n",
+       "\n",
+       "function slowDown() {\n",
+       "    speed /= 8;\n",
+       "    if (speed <= 1)\n",
+       "        speed = 0;\n",
+       "}\n",
+       "\n",
+       "function regularSpeed() {\n",
+       "    speed = 0;\n",
+       "}\n",
+       "\n",
+       "function resetClock() {\n",
+       "    speed = -1;\n",
+       "}\n",
+       "\n",
+       "function animate(date) {\n",
+       "    var date = new Date(date);\n",
+       "    if (speed > 0)\n",
+       "        date.setSeconds((date.getSeconds()) + speed);\n",
+       "    else {\n",
+       "        date.setMilliseconds((date.getMilliseconds() + (1000/60)));\n",
+       "    }\n",
+       "    requestAnimationFrame(function() {\n",
+       "        animate(speed > -1 ? date : new Date());\n",
+       "    });\n",
+       "\n",
+       "    ctx.clearRect(0, 0, canvas.width, canvas.height);\n",
+       "    ctx.fillStyle = \"#090909\";\n",
+       "    ctx.fillRect(0, 0, canvas.width, canvas.height);\n",
+       "\n",
+       "    var sec = new TimeCircle(x, y, radius, lineWidth, 1, ((Math.PI * 2 / 60) * date.getSeconds() + Math.PI * 3 / 2), '#CC00FF');\n",
+       "    var min = new TimeCircle(x, y, radius, lineWidth, 2, ((Math.PI * 2 / 60) * date.getMinutes() + Math.PI * 3 / 2), '#099FFF');\n",
+       "    var hour = new TimeCircle(x, y, radius, lineWidth, 3, ((Math.PI * 2 / 24) * date.getHours() + Math.PI * 3 / 2), '#00FF00');\n",
+       "    var day = new TimeCircle(x, y, radius, lineWidth, 4, ((Math.PI * 2 / monthDivider(date.getMonth(), date.getFullYear())) * date.getDate() + Math.PI * 3 / 2), '#FFFF33');\n",
+       "    var month = new TimeCircle(x, y, radius, lineWidth, 5, ((Math.PI * 2 / 12) * date.getMonth() + Math.PI * 3 / 2), '#FF0000');\n",
+       "\n",
+       "    sec.draw();\n",
+       "    min.draw();\n",
+       "    hour.draw();\n",
+       "    day.draw();\n",
+       "    month.draw();\n",
+       "\n",
+       "    var time = (date.getHours() < 10 ? \"0\" + date.getHours() : date.getHours()) +\n",
+       "        \":\" + (date.getMinutes() < 10 ? \"0\" + date.getMinutes() : date.getMinutes()) +\n",
+       "        \":\" + (date.getSeconds() < 10 ? \"0\" + date.getSeconds() : date.getSeconds()) +\n",
+       "        \", \" + months[date.getMonth()] + \" \" + date.getDate() + \", \" + date.getFullYear();\n",
+       "    ctx.fillStyle = \"white\";\n",
+       "    ctx.font = \"30px Arial\";\n",
+       "    ctx.fillText(time, 30, height - 10);\n",
+       "}\n",
+       "\n",
+       "animate(new Date());\n",
+       "\n",
+       "function TimeCircle(x, y, radius, strokeWidth, radiusMultiplyer, end, colour) {\n",
+       "    this.x = x;\n",
+       "    this.y = y;\n",
+       "    this.radiusMultiplyer = radiusMultiplyer;\n",
+       "    this.start = Math.PI * 3 / 2;\n",
+       "    this.end = end;\n",
+       "    this.radius = radius + (strokeWidth * radiusMultiplyer);\n",
+       "    this.strokeWidth = strokeWidth;\n",
+       "    this.colour = colour;\n",
+       "\n",
+       "    this.draw = function () {\n",
+       "        ctx.beginPath(x, y);\n",
+       "        ctx.arc(this.x, this.y, this.radius, this.start, this.end, this.false);\n",
+       "        ctx.lineWidth = this.strokeWidth;\n",
+       "        ctx.strokeStyle = this.colour;\n",
+       "        ctx.lineCap = 'round';\n",
+       "        ctx.stroke();\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function monthDivider(month, year) {\n",
+       "    switch (month) {\n",
+       "        case 0:\n",
+       "        case 2:\n",
+       "        case 4:\n",
+       "        case 6:\n",
+       "        case 7:\n",
+       "        case 9:\n",
+       "        case 11:\n",
+       "            return 31;\n",
+       "        case 3:\n",
+       "        case 5:\n",
+       "        case 8:\n",
+       "        case 10:\n",
+       "            return 30;\n",
+       "        case 1:\n",
+       "            if (((year % 4 == 0) && (year % 100 != 0)) || (year % 400 == 0)) {\n",
+       "                return 29\n",
+       "            } else {\n",
+       "                return 28\n",
+       "            };\n",
+       "        default:\n",
+       "            return 31;\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "    </script>\n",
+       "</body>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -641,9 +819,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <style>\n",
+       "        #list {\n",
+       "            margin: 20px 0;\n",
+       "            padding: 0;\n",
+       "        }\n",
+       "        #list li {\n",
+       "            list-style: none;\n",
+       "            margin: 5px 0;\n",
+       "        }\n",
+       "\n",
+       "        .colour {\n",
+       "            width: 50px;\n",
+       "            height: 50px;\n",
+       "            border-radius: 10px;\n",
+       "        }\n",
+       "\n",
+       "        .answerSelect {\n",
+       "            margin: 10px 10px;\n",
+       "        }\n",
+       "\n",
+       "        .correct {\n",
+       "            color: green;\n",
+       "            font-size: 25px;\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        .wrong {\n",
+       "            color: red;\n",
+       "            font-size: 25px;\n",
+       "            display: none;\n",
+       "        }\n",
+       "\n",
+       "        .ansBtn {\n",
+       "            cursor: pointer;\n",
+       "            border: solid black 1px;\n",
+       "            background: #d3d3d3;\n",
+       "            padding: 10px 5px;\n",
+       "            border-radius: 5px;\n",
+       "            font-family: 'Courier New', Courier, monospace;\n",
+       "            font-size: 20px;\n",
+       "        }\n",
+       "\n",
+       "        .ansBtn:hover {\n",
+       "            background: #f3f3f3;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <body>\n",
+       "    <div style=\"height: 550px\">\n",
+       "        <ul id=\"list\">\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #099FFF\"></div>\n",
+       "                <select name=\"\" id=\"q1\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"seconds\">Seconds</option>\n",
+       "                    <option value=\"minutes\">Minutes</option>\n",
+       "                    <option value=\"hours\">Hours</option>\n",
+       "                    <option value=\"days\">Days</option>\n",
+       "                    <option value=\"month\">month</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q1C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q1W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #FF0000\"></div>\n",
+       "                <select name=\"\" id=\"q2\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"seconds\">Seconds</option>\n",
+       "                    <option value=\"minutes\">Minutes</option>\n",
+       "                    <option value=\"hours\">Hours</option>\n",
+       "                    <option value=\"days\">Days</option>\n",
+       "                    <option value=\"month\">month</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q2C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q2W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #CC00FF\"></div>\n",
+       "                <select name=\"\" id=\"q3\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"seconds\">Seconds</option>\n",
+       "                    <option value=\"minutes\">Minutes</option>\n",
+       "                    <option value=\"hours\">Hours</option>\n",
+       "                    <option value=\"days\">Days</option>\n",
+       "                    <option value=\"month\">month</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q3C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q3W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #00FF00\"></div>\n",
+       "                <select name=\"\" id=\"q4\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"seconds\">Seconds</option>\n",
+       "                    <option value=\"minutes\">Minutes</option>\n",
+       "                    <option value=\"hours\">Hours</option>\n",
+       "                    <option value=\"days\">Days</option>\n",
+       "                    <option value=\"month\">month</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q4C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q4W\">&#10007</span>\n",
+       "            </li>\n",
+       "            <li>\n",
+       "                <div class=\"colour\" style=\"background: #FFFF33\"></div>\n",
+       "                <select name=\"\" id=\"q5\" class=\"answerSelect\">\n",
+       "                    <option value=\"default\" selected>Select an Answer</option>\n",
+       "                    <option value=\"seconds\">Seconds</option>\n",
+       "                    <option value=\"minutes\">Minutes</option>\n",
+       "                    <option value=\"hours\">Hours</option>\n",
+       "                    <option value=\"days\">Days</option>\n",
+       "                    <option value=\"month\">month</option>\n",
+       "                </select>\n",
+       "                <span class=\"correct\" id=\"Q5C\">&#10003</span>\n",
+       "                <span class=\"wrong\" id=\"Q5W\">&#10007</span>\n",
+       "            </li>\n",
+       "        </ul>\n",
+       "        <span class=\"ansBtn\" id=\"ansBtn\" onclick=\"checkAns()\">Check Answers!</span>\n",
+       "    </div>\n",
+       "\n",
+       "    <script>\n",
+       "        function checkAns() {\n",
+       "            console.log('clicked');\n",
+       "            var ansArray = [];\n",
+       "            var questionList = document.getElementById('list');\n",
+       "            for (var i = 0; i < document.getElementsByClassName('correct').length; i++) {\n",
+       "                document.getElementsByClassName('correct')[i].style.display = 'none';  \n",
+       "            }\n",
+       "            for (var i = 0; i < document.getElementsByClassName('wrong').length; i++) {\n",
+       "                document.getElementsByClassName('wrong')[i].style.display = 'none';\n",
+       "            }\n",
+       "            for (var i = 0; i < questionList.children.length; i++) {\n",
+       "                ansArray.push(questionList.children[i].children[1].value);\n",
+       "            }\n",
+       "            ansArray[0] === 'minutes' ? setAns(1, true) : setAns(1, false);\n",
+       "            ansArray[1] === 'month' ? setAns(2, true) : setAns(2, false);\n",
+       "            ansArray[2] === 'seconds' ? setAns(3, true) : setAns(3, false);\n",
+       "            ansArray[3] === 'hours' ? setAns(4, true) : setAns(4, false);\n",
+       "            ansArray[4] === 'days' ? setAns(5, true) : setAns(5, false);\n",
+       "        }\n",
+       "\n",
+       "        function setAns(pos, isCorrect) {\n",
+       "            var ansId = \"Q\" + pos + (isCorrect ? \"C\" : \"W\");\n",
+       "            var ans = document.getElementById(ansId);\n",
+       "            ans.style.display = \"inline\";\n",
+       "        }\n",
+       "    </script>\n",
+       "</body>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "    <style>\n",
@@ -831,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
