started on CC-66

--- a/Nicole/StatsNotebooks/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
+++ b/Nicole/StatsNotebooks/CC-66-Effect_Of_Ouliers_On_Central_Tendency.ipynb
@@ -11,80 +11,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "\n",
        "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "  if (code_show) {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      el = $(this).find('.cm-variable:first');\n",
-       "      if (id == 0 || el.text() == 'hide_me') {\n",
-       "        $(this).hide();\n",
-       "      }\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 0);\n",
-       "  } else {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      $(this).show();\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 1);\n",
+       "  function code_toggle() {\n",
+       "    if (code_shown){\n",
+       "      $('div.input').hide('500');\n",
+       "      $('#toggleButton').val('Show Code')\n",
+       "    } else {\n",
+       "      $('div.input').show('500');\n",
+       "      $('#toggleButton').val('Hide Code')\n",
+       "    }\n",
+       "    code_shown = !code_shown\n",
        "  }\n",
-       "  code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>The raw code for this IPython notebook is by default hidden for easier reading.\n",
-       "To toggle on/off the raw code,\n",
-       "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
+       "\n",
+       "  $( document ).ready(function(){\n",
+       "    code_shown=false;\n",
+       "    $('div.input').hide()\n",
+       "  });\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from IPython.display import HTML\n",
-    "hide_me = ''\n",
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "  if (code_show) {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      el = $(this).find('.cm-variable:first');\n",
-    "      if (id == 0 || el.text() == 'hide_me') {\n",
-    "        $(this).hide();\n",
-    "      }\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 0);\n",
-    "  } else {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      $(this).show();\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 1);\n",
+    "%%html\n",
+    "\n",
+    "<script>\n",
+    "  function code_toggle() {\n",
+    "    if (code_shown){\n",
+    "      $('div.input').hide('500');\n",
+    "      $('#toggleButton').val('Show Code')\n",
+    "    } else {\n",
+    "      $('div.input').show('500');\n",
+    "      $('#toggleButton').val('Hide Code')\n",
+    "    }\n",
+    "    code_shown = !code_shown\n",
     "  }\n",
-    "  code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>The raw code for this IPython notebook is by default hidden for easier reading.\n",
-    "To toggle on/off the raw code,\n",
-    "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+    "\n",
+    "  $( document ).ready(function(){\n",
+    "    code_shown=false;\n",
+    "    $('div.input').hide()\n",
+    "  });\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "import numpy as np\n",
     "import matplotlib.mlab as mlab\n",
     "import matplotlib.pyplot as plt\n",
@@ -101,6 +90,37 @@
     "import csv\n",
     "import pandas as pd\n",
     "from pandas import DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Effect of Outliers on Central Tendency\n",
+    "\n",
+    "This notebook focuses on what an outlier is and how it affects central tendency. Remember central tendency means the mean, median, and mode of some data. If you need review on central tendency, check out this previous notebook.\n",
+    "\n",
+    "Things you will learn in this notebook:\n",
+    "* What an outlier is\n",
+    "* How an outlier affects mean\n",
+    "* How an outlier affects median\n",
+    "* How an outlier affects mode\n",
+    "* Why outliers can be a problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is an outlier?\n",
+    "\n",
+    "An outlier is a value that \"lies outside\" (is much smaller or larger than) most of the other values in a set of data.\n",
+    "\n",
+    "Let's look at an example:\n",
+    "Here is a data set: $26, 23, 27, 25, 28, 29, 24, 99 $\n",
+    "Lets put it in order: $23, 24, 25, 26, 27, 28, 29, 99$\n",
+    "<br> $99$ is larger than all the other data, by a lot.\n",
+    "<br> Therefore, we can call $99$ an outlier."
    ]
   },
   {
@@ -147,6 +167,39 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Central tendency\n",
+    "\n",
+    "First let's look at the central tendency of the example below. \n",
+    "\n",
+    "Then we will remove the outlier and recalculate the central tendency.\n",
+    "\n",
+    "What changes do you notice? What changed the most"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A bigger set of data\n",
+    "\n",
+    "Let's look at some data about the sodium content (amount of salt) in different common foods. Let's also put the data on a number line. Is there an outlier?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's calculate the mean, median, and mode using the computer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "##  <font color='Blue'>  Section 1 </font> \n",
@@ -160,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -206,15 +259,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we will read the data one by one and store them into an array. The first line imports the file. The next lines tell Jupyter how to read the file, and the last line tells Jupyter to display the information it read from the file."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,19 +281,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we've loaded our data, we need to process it. <br>\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "def computeCenTendency(dataset):\n",
     "    \n",
     "    #mean value\n",
@@ -280,16 +318,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3 Calculation \n",
-    "Now we call a function which will return us the mean, median, and mode of a dataset.. The required parameter of the function is the list of data. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -328,44 +358,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hide_me\n",
-    "\n",
-    "def plotHistogram(x_values, num_bins, xLabel, yLabel, histTitle):\n",
-    "    n, bins, patches = plt.hist(x_values, num_bins, facecolor='blue', alpha=0.5)\n",
-    "\n",
-    "    plt.xlabel(xLabel)\n",
-    "    plt.ylabel(yLabel)\n",
-    "    plt.title(histTitle)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we define another function to get the value of *bin* value size from the user and generate a histogram based on the value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hide_me\n",
-    "\n",
-    "def callPlottingFunction(num_bins):\n",
-    "    print(\"Generating... plot for :\", num_bins)\n",
-    "    plotHistogram(data, num_bins , 'Sodium Content', 'values', 'Histogram of 30 products in Australian supermarkets')\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,40 +375,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6123e7a38174fe8b44d1236474e7501",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "interactive(children=(IntSlider(value=50, description='num_bins'), Output()), _dom_classes=('widget-interact',))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def plotHistogram(x_values, num_bins, xLabel, yLabel, histTitle):\n",
+    "    n, bins, patches = plt.hist(x_values, num_bins, facecolor='blue', alpha=0.5)\n",
+    "\n",
+    "    plt.xlabel(xLabel)\n",
+    "    plt.ylabel(yLabel)\n",
+    "    plt.title(histTitle)\n",
+    "    plt.show()\n",
+    "    \n",
+    "def callPlottingFunction(num_bins):\n",
+    "    print(\"Generating... plot for :\", num_bins)\n",
+    "    plotHistogram(data, num_bins , 'Sodium Content', 'values', 'Histogram of 30 products in Australian supermarkets')\n",
+    "\n",
     "interact(callPlottingFunction, num_bins=widgets.IntSlider(min=0,max=100,step=1,value=50));"
    ]
   },
@@ -438,11 +412,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sodium content read from the file:  [871, 1250, 270, 250, 205, 340, 843, 482, 521, 450, 360, 780, 340, 510, 460, 380, 290, 458, 335, 355, 590, 600, 595, 547, 1036, 410, 190, 530]\n",
+      "Mean:  508.857\n",
+      "Median:  459.0\n",
+      "Mode: 340 (appeared 2 times.)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "159a1da61b8f4f71b6ae59d559dbe57c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=50, description='num_bins'), Output()), _dom_classes=('widget-interact',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "hide_me\n",
     "dataWithoutOutlier = []\n",
     "with open('CC66_materials/exampleData_NoOutlier.csv', 'r') as f:\n",
     "    reader = csv.reader(f)\n",
@@ -476,7 +474,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "inputs = []\n",
     "numbers = int(input(\"Number(s) of Outlier : \"))\n",
     "inputs = [input(\"Outlier \" + str(i+1) + \": \")  for i in range(numbers)]\n",
@@ -524,7 +521,6 @@
    },
    "outputs": [],
    "source": [
-    "hide_me\n",
     "def callPlottingFunctionWithOutlier(num_bins):\n",
     "    print(\"Generating... plot for :\", num_bins)\n",
     "    plotHistogram(datasetWithOutlier, num_bins, 'Sodium Content', 'values', 'Histogram with Outliers')\n",
@@ -554,7 +550,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "centralTendencyWithoutOutlierArray = np.around(np.asarray(centralTendencyWithoutOutlier), 3)\n",
     "centralTendencyWithOutlierArray = np.around(np.asarray(centralTendencyWithOutlier), 3) \n",
     "\n",
@@ -564,15 +559,6 @@
     "        'After adding outlier ': np.array([centralTendencyWithOutlierArray[0], centralTendencyWithOutlierArray[1],\n",
     "                                           centralTendencyWithOutlierArray[2]])}\n",
     "print(Table(arr))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##  <font color='Blue'>  Section 4 </font> \n",
-    "## Example Using Python Library \n",
-    "In this section we discuss about pandas dataframe. We use **nba_2013.csv** file as dataset that contains $30$ different criteria of $480$ nba players of 2013. We compute the central tendency of this dataframe on [a previous notebook](CC65-Central_Tendency.ipynb). Now we show the outliers of this dataset. We find out the outliers for **stl** categories. Students can change the category name(e.g. **age, mp, fg, drb, asst, gs, tov...**) on the fourth line (only replace the \"stl\" with category name) of the following code and observe whether there is any outlier or not. "
    ]
   },
   {
@@ -626,7 +612,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "def display(question, answerList):\n",
     "    print(question)\n",
     "    IPython.display.display(answerList)"
@@ -638,7 +623,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "question611 = \"6.1.1 What will be the mean of semester 1?\"\n",
     "answer611 = widgets.RadioButtons(options=['Select best one','2.95', '3', '3.05', '3.10', 'None of the above'],\n",
     "                             value= 'Select best one', description='Choices:')\n",
@@ -705,7 +689,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "question612 = \"6.1.2 What will be the median of semester 2?\"\n",
     "\n",
     "answer612 = widgets.RadioButtons(options=['Select best one', '2.43', '2.5', '2.67', '2.75', 'None of the above'],\n",
@@ -789,7 +772,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "question621 = \"6.2.1 What is the distribution type of semester 1? (Hint:first, calcualte mean, median, mode)\"\n",
     "\n",
     "answer621 = widgets.RadioButtons(options=['Select best one', 'Negatively Skewed', 'Positively skewed', 'both of them', 'None of the above'],\n",
@@ -889,7 +871,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "answer622 = widgets.RadioButtons(options=[  'Select best one','2.5 and 3.1', '2.6 and 3.1', '2.6 and 3.2', '2.8 and 3.2', 'None of the above'],\n",
     "                             value = 'Select best one', description='Choices:')\n",
     "\n",
@@ -967,7 +948,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "answer631 = widgets.RadioButtons(options=[ 'Select best one','78', '78.5', '79', '80', 'None of the above'],\n",
     "                             value = 'Select best one', description='Choices:')\n",
     "\n",
@@ -1054,7 +1034,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "answer641 = widgets.RadioButtons(options=['Select best one','1.6 and 4.1', '1.7 and 3.9', '2.2 and 3.8', '1.7 and 4.1', 'None of the above'],\n",
     "                              value='Select best one',description='Choices:')\n",
     "\n",
@@ -1127,7 +1106,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hide_me\n",
     "answer642 = widgets.RadioButtons(options=['Select best one', '2.2', '3.8', '1.7', '2.1', 'None of the above'],\n",
     "                             value = 'Select best one',  description='Choices:')\n",
     "\n",
@@ -1204,18 +1182,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
