Frogs on Logs widget working

--- a/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
@@ -27,18 +27,19 @@
    "source": [
     "%%html\n",
     "<link rel=\"stylesheet\" href=\"style.css\">\n",
+    "    <div class=\"frogNum\">\n",
+    "        <label for=\"frogs\"><strong>Choose number of frogs: </strong></label>\n",
+    "        <select name=\"frogs\" id=\"frogNumberSelector\">\n",
+    "            <option value=\"2\" selected>4 Frogs</option>\n",
+    "            <option value=\"3\">6 Frogs</option>\n",
+    "            <option value=\"4\">8 Frogs</option>\n",
+    "        </select>\n",
+    "    </div>\n",
     "    <div class=\"mainGrid\">\n",
     "        <ul id=\"frogList\" class=\"frogGrid\">\n",
-    "            <li class=\"frog\" id=\"pos0\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "            <li class=\"frog\" id=\"pos1\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "            <li class=\"frog\" id=\"pos2\"><img class=\"clickable\" src=\"imgs/frogRed.png\" alt=\"red frog\"></li>\n",
-    "            <li class=\"frog\" id=\"pos3\"><img src=\"imgs/blankSpace.png\" alt=\"\"></li>\n",
-    "            <li class=\"frog\" id=\"pos4\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-    "            <li class=\"frog\" id=\"pos5\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
-    "            <li class=\"frog\" id=\"pos6\"><img class=\"clickable\" src=\"imgs/frogGreen.png\" alt=\"green frog\"></li>\n",
     "            <li class=\"btns\" onclick=\"resetFrogs()\"><span>Reset</span></li>\n",
     "            <li class=\"btns\" onclick=\"undo()\"><span>Undo</span></li>\n",
-    "            <li class=\"moveCounter\">Your moves: <span id=\"counter\">0</span></li>\n",
+    "            <li class=\"counter\">Your moves: <span id=\"counter\">0</span></li>\n",
     "        </ul>\n",
     "    </div>\n",
     "\n",
@@ -71,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
