Added table to frogs puzzle

--- a/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
+++ b/Vincent/CC-207 Frogs on a Log Puzzle/FrogsOnALog.ipynb
@@ -42,6 +42,16 @@
     "            <li class=\"counter\">Your moves: <span id=\"counter\">0</span></li>\n",
     "        </ul>\n",
     "    </div>\n",
+    "    \n",
+    "        <div>\n",
+    "        <table id=\"moveTable\">\n",
+    "            <tr>\n",
+    "                <th>Step Number</th>\n",
+    "                <th>Current Position</th>\n",
+    "                <th>Move</th>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
     "\n",
     "    <script src=\"https://code.jquery.com/jquery-3.3.1.slim.min.js\" integrity=\"sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=\"\n",
     "        crossorigin=\"anonymous\"></script>\n",
